# backend_101

./: .gitignore  history_step_1.json
assistant/: hello.py  main.py  pyproject.toml  user@example.com.json
assistant/agent/: main.py
assistant/chat_histories/: umaismuhammad99@gmail.com.json
assistant/src/agent/: main.py  test.py
assistant/src/auth/: main.py
ecommerce-chatbot/: agent.py  chatbot.py  experiment.ipynb  ingestion.py  langgraphagent.py  plan  tools.py  utils.py
ecommerce-chatbot/src/: __init__.py  utils.py
ecommerce-chatbot/src/auth/: routes.py  schemas.py
ecommerce-chatbot/src/chatbot/: ingestion.py  route.py  service.py  tools.py
ecommerce-chatbot/src/db/: main.py
ecommerce-chatbot/src/resume/: resume.py
